--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "tailwindcss": "^3.0.0",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "lightbox2": "^2.11.3"
     }
 }
